# besshouka

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: codeql.yml  pr.yml  push.yml  release.yml
Documentation/: Algorithm design.md  Monetization Strategy.md
besshouka/: README.md  cli.py
besshouka/analyzer/: README.md  conflict_resolution.py  normalize.py  registry.py
besshouka/analyzer/recognizers/: README.md  base.py  ginza_recognizer.py  regex_recognizer.py
besshouka/anonymizer/: README.md  engine.py
besshouka/anonymizer/operators/: README.md  base.py  custom.py  encrypt.py  hash.py  keep.py  mask.py  redact.py  replace.py
besshouka/config/: README.md  loader.py
besshouka/defaults/: README.md  operators.yaml  recognizers.yaml
besshouka/models/: README.md  engine_result.py  recognizer_result.py
besshouka/orchestrator/: README.md  context.py  pipeline.py
tests/: conftest.py  test_cli.py
tests/test_analyzer/: test_conflict_resolution.py  test_normalize.py  test_registry.py
tests/test_analyzer/test_recognizers/: test_ginza_recognizer.py  test_regex_recognizer.py
tests/test_anonymizer/: test_engine.py
tests/test_anonymizer/test_operators/: test_custom.py  test_encrypt.py  test_hash.py  test_keep.py  test_mask.py  test_redact.py  test_replace.py
tests/test_config/: test_loader.py
tests/test_models/: test_engine_result.py  test_recognizer_result.py
tests/test_orchestrator/: test_context.py  test_pipeline.py
